--- a/css/style.css
+++ b/css/style.css
@@ -54,6 +54,12 @@ img {
   opacity: 1;
 }
 
+.length-value {
+  font-size: 24px;
+  line-height: 32px;
+  color: var(--neon-green);
+}
+
 .strength {
   color: var(--grey);
 }
@@ -115,14 +121,61 @@ img {
   align-items: center;
 }
 
-.length-value {
-  font-size: 24px;
-  line-height: 32px;
-  color: var(--neon-green);
+.slider {
+  -webkit-appearance: none;
+  width: 100%;
+  height: 8px;
+  background: var(--very-dark-grey);
+  outline: none;
+  -webkit-transition: 0.2s;
+  transition: opacity 0.2s;
+  margin-top: 18px;
+  display: block;
 }
 
-.slider {
-  display: block;
+.slider::-moz-range-progress {
+  background: var(--neon-green);
+  height: 100%;
+}
+
+.slider::-ms-fill-lower {
+  background: var(--neon-green);
+  height: 100%;
+}
+
+.slider::-webkit-slider-thumb {
+  -webkit-appearance: none;
+  appearance: none;
+  width: 28px;
+  height: 28px;
+  border: 0;
+  border-radius: 50%;
+  background-color: var(--almost-white);
+  border: 2px solid var(--almost-white);
+  cursor: pointer;
+  transition: all 0.2s ease-in-out;
+}
+
+.slider::-moz-range-thumb {
+  appearance: none;
+  width: 28px;
+  height: 28px;
+  border: 0;
+  border-radius: 50%;
+  background-color: var(--almost-white);
+  border: 2px solid var(--almost-white);
+  transition: all 0.2s ease-in-out;
+  cursor: pointer;
+}
+
+.slider::-webkit-slider-thumb:hover {
+  background-color: var(--very-dark-grey);
+  border: 2px solid var(--neon-green);
+}
+
+.slider::-moz-range-thumb:hover {
+  background-color: var(--very-dark-grey);
+  border: 2px solid var(--neon-green);
 }
 
 .checkbox-wrapper {
@@ -242,6 +295,10 @@ img {
   .generator {
     margin-top: 24px;
     padding: 24px 32px 32px;
+  }
+
+  .slider {
+    margin-top: 26px;
   }
 
   .checkbox-wrapper {
